trunk/Archive2/bc/678b1933c0dae3/output
main.cpp:14:16: error: cannot initialize return object of type 'const ptr<ubyte>' (aka 'unsigned char *const') with an rvalue of type 'const ubyte *' (aka 'const unsigned char *')
        return &colors[0];
               ^~~~~~~~~~
1 error generated.
